--- a/reproducibility_exercise/reproducibilityReport_bumperRails.Rmd
+++ b/reproducibility_exercise/reproducibilityReport_bumperRails.Rmd
@@ -72,9 +72,9 @@ d = d %>%
 ### First, check the number of observations for each condition
 ```{r}
 d %>%
-  group_by("FIXME") %>%
+  group_by(DIRECTION) %>%
   summarize(
-    num_obs = "FIXME",
+    num_obs = n(),
     .groups = "keep"
   ) %>%
   ungroup()
@@ -90,7 +90,7 @@ Note on statistics: the goal of this assignment is for you to get used to reprod
 Now fill in the aov command with the proper variables (e.g. replace "VAR1" with the first variable of interest. This is a two-way ANOVA that tests for a main effect of direction (east vs west), a main effect of station, and an interaction between direction and station. The interaction term is denoted by the * below. For more information, do a little Googling about two-way ANOVAs.
 ```{r test1}
 mod <- aov(data = d,
-           formula = DISTANCE ~ "VAR1" + "VAR2" + "VAR1"*"VAR2")
+           formula = DISTANCE ~ DIRECTION + STN_NUMBER + DIRECTION*STN_NUMBER)
 anova(mod)
 ```
 
@@ -105,7 +105,7 @@ Note from instructors: We're unclear as to why the F-values are slightly differe
 ### Effect size
 Get the partial eta-squared (under the `eta.sq.part` column). Do your results match the original paper? Hint: they should!
 ```{r}
-etaSquared("FIXME")
+etaSquared(mod)
 ```
 ### Station-specific analyses
 
@@ -116,33 +116,80 @@ etaSquared("FIXME")
 
 # STEP 1: filter the data to get only St. George estimates
 st.george = d %>%
-  "FIXME"
+  filter(STN_NAME == 'STG')
 
 # STEP 2: was the estimated distance to St. George greater for eastbound or westbound travellers?
 # no stats needed, just get the mean estimated distance between east and west directions
 # Hint: you'll want group_by() and summarize()
 st.george %>% 
-  "FIXME"
+  group_by(DIRECTION)%>%
+  summarize(
+    mean = mean(DISTANCE)
+            )
 
-# STEP 3: Now run an aov on St. George data with distance as the response variable and direction as the explanatory variable
-st.george.aov = aov(data = st.george, formula = "FIXME")
+# STEP 3: Now run an aov on St. George data with distance as the response variable and direction as the explanatory variable\
+st.george.aov = aov(data = st.george, formula = DISTANCE ~ DIRECTION)
 summary(st.george.aov)
 
 # STEP 4: Find the eta squared
-"FIXME"
+etaSquared(st.george.aov)
 ```
 
 #### Spadina
 ```{r spadina}
 ## do the same for Spadina
+### Station-specific analyses
 
+#### Spadina
+
+# STEP 1: filter the data to get only St. George estimates
+spadina = d %>%
+  filter(STN_NAME == 'SPAD')
+
+# STEP 2: was the estimated distance to St. George greater for eastbound or westbound travellers?
+# no stats needed, just get the mean estimated distance between east and west directions
+# Hint: you'll want group_by() and summarize()
+spadina %>% 
+  group_by(DIRECTION)%>%
+  summarize(
+    mean = mean(DISTANCE)
+            )
+
+# STEP 3: Now run an aov on St. George data with distance as the response variable and direction as the explanatory variable\
+spadina.aov = aov(data = spadina, formula = DISTANCE ~ DIRECTION)
+summary(spadina.aov)
+
+# STEP 4: Find the eta squared
+etaSquared(spadina.aov)
+```
 
 ```
 
 #### Bloor-Yonge
 ```{r bloor-yonge}
 ## do the same for Bloor-Yonge
+### Station-specific analyses
 
+# STEP 1: filter the data to get only St. George estimates
+bloor = d %>%
+  filter(STN_NAME == 'B-Y')
+
+# STEP 2: was the estimated distance to St. George greater for eastbound or westbound travellers?
+# no stats needed, just get the mean estimated distance between east and west directions
+# Hint: you'll want group_by() and summarize()
+bloor %>% 
+  group_by(DIRECTION)%>%
+  summarize(
+    mean = mean(DISTANCE)
+            )
+
+# STEP 3: Now run an aov on St. George data with distance as the response variable and direction as the explanatory variable\
+bloor.aov = aov(data = bloor, formula = DISTANCE ~ DIRECTION)
+summary(bloor.aov)
+
+# STEP 4: Find the eta squared
+etaSquared(bloor.aov)
+```
 ```
 
 #### Sherbourne
